# aidata-explo

./: README.md  repare.sql
forecasting/bob/: pyproject.toml
forecasting/bob/bob/: __init__.py
matchFK/: index.js  package.json
node/: package.json  visu.js
node/lib/: db.js
predict/: main.py
python/: pyproject.toml
python/chatgpt/chatgpt/: main.py  main2.py
