[tool.poetry]
name = "chatgpt"
version = "0.1.0"
description = ""
authors = ["Zao Soula <contact@zaosoula.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mysql = "^0.0.3"
pandas = "^1.5.2"
sklearn = "^0.0.post1"
datetime = "^4.9"
mysql-connector-python = "^8.0.31"
scikit-learn = "^1.2.0"
matplotlib = "^3.6.2"
statsmodels = "^0.13.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
